# AudioTemplate

./: .travis.yml  CMakeLists.txt  README.md
applications/: CMakeLists.txt  beatdetect.cpp  dubstep.cpp  equalizer.cpp  fft.cpp  loopback.cpp  nodeosc.cpp  playback.cpp  testbed.cpp  waveforms.cpp
cmake/: macros.cmake
cmake/modules/: CheckCXXCompilerFlag.cmake  FindFFTW.cmake  FindMusepack.cmake  FindOpus.cmake  FindRapidJSON.cmake  Findlibsndfile.cmake
data/shaders/: audio_visualizer_2.glsl  audiosurf.glsl  neon_parallax.glsl  sound_input.glsl  yellow_bars.glsl
examples/: CMakeLists.txt  audio_shader.cpp  playback.cpp  waveforms.cpp
examples/audio/: beatdetect.cpp  convolution.cpp  dubstep.cpp  equalizer.cpp  fft.cpp  loopback.cpp  playback.cpp  testbed.cpp  waveforms.cpp
examples/extras/: sdl.cpp  sdl.h  stats.cpp
examples/three/: common.h  custom_attributes_particles2.cpp  simple.cpp
libraries/: CMakeLists.txt
libraries/audio/: CMakeLists.txt  SamplerateControl.h  SamplerateObserver.h  SimpleAudio.h  SimpleMP3.h  audio.h  audio_device.h  audio_io.h  codec_repository.cpp  codec_repository.h  io.h  samplerate_aware.cpp  samplerate_aware.h  samplerate_control.cpp  samplerate_control.h  samplerate_observer.h
libraries/audio/codecs/: audio_codec.h  audio_info.h  codec_registrar.h  mpadec_codec.cpp  mpadec_codec.h  mpadec_info.cpp  mpadec_info.h  musepack_codec.cpp  musepack_codec.h  musepack_info.cpp  musepack_info.h  opus_codec.cpp  opus_codec.h  opus_info.cpp  opus_info.h  registered_codec.h  sndfile_codec.cpp  sndfile_codec.h  sndfile_info.h
libraries/audio/data-access/: data_access.h  data_access_factory.cpp  data_access_factory.h  file.cpp  file.h  file_source.h  http.cpp  http.h  uri.cpp  uri.h
libraries/audio/decoders/: mp3.h
libraries/audio/sources/: file_source.h  source.h
libraries/common/: CMakeLists.txt  active_object.h  active_object.hpp  config.h  config.hpp  noncopyable.h  readerwriterqueue.h  shared_queue.hpp  stride_iterator.h
libraries/common/logging/: crashhandler.h  crashhandler_unix.cpp  crashhandler_win.cpp  filesink.cpp  filesink.h  future.h  g2future.hpp  g2logworker.cpp  g2logworker.hpp  g2sink.hpp  log.cpp  log.h  loglevels.cpp  loglevels.h  logmessage.cpp  logmessage.h  logmessagecapture.cpp  logmessagecapture.h  logworker.cpp  logworker.h  sink.h  sinkhandle.h  sinkwrapper.h  time.cpp
libraries/common/tests/: CMakeLists.txt  test_active_object.cpp  test_logging.cpp  test_shared_queue.cpp
libraries/dsp/: CMakeLists.txt
libraries/dsp/analysis/: beat_detector.cpp  beat_detector.h  envelope_detector.h  fft.cpp  fft.h  kiss_fft.cpp  kiss_fft.h
libraries/dsp/common/: denormal_prevention.h  dsp_algorithm.h  dsp_math.h
libraries/dsp/filters/: Bessel.cpp  Bessel.h  Biquad.cpp  Biquad.h  Butterworth.cpp  Butterworth.h  Cascade.cpp  Cascade.h  ChebyshevI.cpp  ChebyshevI.h  ChebyshevII.cpp  ChebyshevII.h  Custom.cpp  Custom.h  Design.cpp  Design.h  Dsp.h  Elliptic.cpp  Elliptic.h  Filter.cpp  Layout.h  Legendre.cpp  Legendre.h  MathSupplement.h  Param.cpp  Params.h  PoleFilter.cpp  PoleFilter.h  RBJ.cpp  RBJ.h  RootFinder.cpp  RootFinder.h  State.cpp  State.h  Types.h  filter.h
libraries/dsp/generators/: adsr.h  envelope.h  noise.h  oscillator.h  waveforms.h
libraries/dsp/test/: CMakeLists.txt  fft_test_vectors.h  test_dsp_algorithm.cpp  test_dsp_math.cpp  test_fft.cpp
libraries/dsp/tests/: CMakeLists.txt  test_dsp_algorithm.cpp  test_fft.cpp
libraries/jaap/: CMakeLists.txt  Oscillator.h  Waveforms.h  common.h
libraries/jaap/analysis/: BeatDetector.cpp  BeatDetector.h  FFT.cpp  FFT.h  KissFFT.cpp  KissFFT.h
libraries/jaap/generators/: Oscillator.h  Waveforms.h
libraries/jaap/test/: CMakeLists.txt  test_fft.cpp
libraries/nodes/: CMakeLists.txt
libraries/nodes/collections/: field.h  field_collection.cpp  field_collection.h  node_collection.cpp  node_collection.h
libraries/nodes/models/: connection.cpp  connection.h  field.cpp  field.h  node.cpp  node.h
libraries/nodes/nodes/: base.h  common.h  conditional.h  math.h
libraries/nodes/tests/: CMakeLists.txt  test_any.cpp  test_base_nodes.cpp  test_conditional_nodes.cpp  test_connection.cpp  test_field.cpp  test_fieldcollection.cpp  test_indexer.cpp  test_inter_node_connections.cpp  test_node.cpp  test_node.h  test_nodecollection.cpp
libraries/nodes/utils/: any.h  indexer.cpp  indexer.h  noncopyable.h
libraries/three/: CMakeLists.txt  config.h  config.hpp  console.hpp  constants.h
libraries/three/core/: face.hpp
libraries/three/extras/: events.hpp
libraries/three/extras/geometries/: cube_geometry.h
libraries/three/extras/utils/impl/: font.ipp
libraries/three/math/: color.h  euler.h  math.h  matrix4.h  vector2.h  vector3.h  vector4.h
libraries/three/renderers/impl/: gl_renderer.cpp
libraries/three/tests/: CMakeLists.txt
libraries/three/tests/unit/math/: math_box2_test.cpp  math_box3_test.cpp  math_color_test.cpp  math_euler_test.cpp  math_frustum_test.cpp  math_line3_test.cpp  math_matrix3_test.cpp  math_matrix4_test.cpp  math_plane_test.cpp  math_quaternion_test.cpp  math_ray_test.cpp  math_sphere_test.cpp  math_triangle_test.cpp  math_vector2_test.cpp  math_vector3_test.cpp  math_vector4_test.cpp
libraries/three/utils/: index.hpp  memory.hpp  noncopyable.hpp  optional.h  properties.hpp
