INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${RTAUDIO_INCLUDE_DIRS} ${MPADEC_INCLUDE_DIRS} ${JAAP_INCLUDE_DIRS})

ADD_EXECUTABLE(loopback loopback.cpp)
TARGET_LINK_LIBRARIES(loopback ${RTAUDIO_LIBRARIES})

ADD_EXECUTABLE(waveforms waveforms.cpp)
TARGET_LINK_LIBRARIES(waveforms ${RTAUDIO_LIBRARIES})

ADD_EXECUTABLE(playback playback.cpp)
TARGET_LINK_LIBRARIES(playback ${RTAUDIO_LIBRARIES} ${MPADEC_LIBRARIES})
