INCLUDE_DIRECTORIES(${AUDIO_INCLUDE_DIRS} ${RTAUDIO_INCLUDE_DIRS} ${MPADEC_INCLUDE_DIRS} ${JAAP_INCLUDE_DIRS})

ADD_EXECUTABLE(loopback loopback.cpp)
TARGET_LINK_LIBRARIES(loopback ${AUDIO_LIBRARY})

ADD_EXECUTABLE(waveforms waveforms.cpp)
TARGET_LINK_LIBRARIES(waveforms ${AUDIO_LIBRARY})

ADD_EXECUTABLE(playback playback.cpp)
TARGET_LINK_LIBRARIES(playback ${AUDIO_LIBRARY})

ADD_EXECUTABLE(fft fft.cpp)
TARGET_LINK_LIBRARIES(fft ${JAAP_LIBRARY})

ADD_EXECUTABLE(beatdetect beatdetect.cpp)
TARGET_LINK_LIBRARIES(beatdetect ${AUDIO_LIBRARY} ${JAAP_LIBRARY})
