INCLUDE_DIRECTORIES(${KISSFFT_INCLUDE_DIRS})

SET(JAAP_SOURCES analysis/FFT.cpp
                 analysis/KissFFT.cpp)

ADD_LIBRARY(jaap ${LIBRARY_TYPE} ${JAAP_SOURCES})

TARGET_LINK_LIBRARIES(jaap ${KISSFFT_LIBRARY})

SET(JAAP_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "Include directories for jaap")
SET(JAAP_LIBRARY jaap CACHE INTERNAL "Jaap library" FORCE)
