INCLUDE_DIRECTORIES("${EXTERNAL_DIR}/yaffut" ${LIBRARIES_INCLUDE_DIR})

FILE(GLOB TEST_SOURCES "test_*.cpp")

ADD_EXECUTABLE(test_dsp ${TEST_SOURCES} "${EXTERNAL_DIR}/yaffut/testrunner.cpp")
TARGET_LINK_LIBRARIES(test_dsp ${DSP_LIBRARY})

_ADD_UNIT_TESTS("${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_dsp" ${TEST_SOURCES})
