INCLUDE_DIRECTORIES("${EXTERNAL_DIR}/yaffut" ${LIBRARIES_INCLUDE_DIR})

FILE(GLOB TEST_SOURCES "test_*.cpp")

ADD_EXECUTABLE(test_nodes ${TEST_SOURCES} "${EXTERNAL_DIR}/yaffut/testrunner.cpp")
TARGET_LINK_LIBRARIES(test_nodes ${NODES_LIBRARY})

enable_testing()

_ADD_UNIT_TESTS(test_nodes ${TEST_SOURCES})
